# voxops

./: .env.sample  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Makefile  README.md  VOXOPS-README.md  azure.yaml  environment.yaml  mkdocs.yml  pyproject.toml  requirements-codequality.txt  requirements-docs.txt  requirements.txt
.devcontainer/: devcontainer.json  post_create.sh
.github/: LOCAL-TESTING.md  copilot-instructions.md
.github/workflows/: README.md  deploy-azd-complete.yml  deploy-azd-staging.yml  deploy-azd.yml  docs.yml
apps/: README.md
apps/rtagent/backend/: Dockerfile  README.md  __init__.py  main.py
apps/rtagent/frontend/: .env.sample  Dockerfile  Dockerfile.back  README.md  entrypoint.sh  index.html  package-lock.json  package.json  serve.json  vite.config.js
apps/rtagent/scripts/: start_backend.py  start_frontend.sh
devops/: .actrc  .secrets.example  .terraform-docs.yaml  azure-bicep.yaml
devops/scripts/azd/: postprovision.sh  preprovision.sh
devops/scripts/misc/: EventGrid-EntraAppConfig.ps1  EventGrid-EntraAppConfig.sh  generate_openapi.py  validate-terraform-backend.sh
devops/security/: bandit_to_sarif.py  run_bandit.py
devops/security/reports/: bandit_repo_20250722_150049.json
docs/: index.md
docs/api/: README.md  api-reference.md  openapi.json
docs/architecture/: README.md  acs-flows.md  data-flows.md  integrations.md  llm-orchestration.md  speech-recognition.md  speech-synthesis.md  streaming-modes.md
docs/assets/: oad-styles.css
docs/deployment/: README.md  cicd.md  production.md
docs/getting-started/: README.md  configuration.md  local-development.md
docs/guides/: repository-structure.md  utilities.md
docs/industry/: healthcare.md
docs/operations/: load-testing.md  monitoring.md  testing.md  troubleshooting.md
docs/samples/: README.md
docs/security/: authentication.md
infra/: README.md
infra/bicep/: README.md  ai-gateway.bicep  app.bicep  appgw.bicep  data.bicep  main.bicep  main.parameters.json  network.bicep
infra/bicep/deprecated/: ai.bicep
infra/bicep/examples/: redis-enterprise-examples-v3.bicep  redis-enterprise-examples.bicep
infra/bicep/modules/: types.bicep
infra/terraform/: README.md  ai-foundry.tf  ai-services.tf.back  backend.tf.example  communication.tf  containers.tf  core.tf  data.tf  keyvault.tf  main.tf  outputs.tf  provider.conf.json  redis.tf  terraform.tfvars.example  variables.tf
infra/terraform/modules/: README.md  apps.tf  webapps.tf
infra/terraform/params/: main.tfvars.dev.json  main.tfvars.prod.json  main.tfvars.staging.json
samples/: README.md
samples/hello_world/: 01-create-your-first-rt-agent.ipynb  02-run-test-rt-agent.ipynb  03-create-your-first-foundry-agents.ipynb  04-exploring-live-api.ipynb  05-create-your-first-livevoice.ipynb
samples/hello_world/artagents/: base.py
samples/hello_world/foundryagents/: README.md  agent_builder.py  demo_customer_service_agent.ipynb
samples/labs/: README.md
samples/labs/dev/: 01-build-your-audio-agent.ipynb  02-how-to-use-aoai-for-realtime-transcriptions.ipynb  03-latency-arena.ipynb  04-memory-agents.ipynb  05-speech-to-text-multilingual.ipynb  06-text-to-speech.ipynb  (+4 more)
src/: __init__.py
src/acs/: ACS-Streaming.md  acs_helper.py
src/agenticmemory/: memoriesbuilder.py  playback_queue.py  types.py  utils.py
src/aoai/: audio_util.py  client.py  client_manager.py  manager.py  manager_transcribe.py  push_to_talk.py
src/blob/: blob_helper.py
src/cosmosdb/: manager.py
src/enums/: __init__.py  monitoring.py  stream_modes.py
src/pools/: aoai_pool.py  async_pool.py  connection_manager.py  dedicated_tts_pool.py  on_demand_pool.py  session_manager.py  session_metrics.py  voice_live_pool.py  websocket_manager.py
src/postcall/: push.py
src/prompts/: prompt_manager.py
src/redis/: manager.py
src/speech/: auth_manager.py  conversation_recognizer.py  speech_recognizer.py  text_to_speech.py  utils_audio.py
src/stateful/: state_managment.py
src/tools/: latency_analytics.py  latency_helpers.py  latency_tool.py
src/vad/: vad_iterator.py
tests/: .env.sample  apim-test.http  backend.http  conftest.py  test_acs_events_handlers.py  test_acs_media_lifecycle.py  test_acs_media_lifecycle_memory.py  test_acs_simple.py  test_dtmf_validation.py  test_dtmf_validation_failure_cancellation.py  test_events_architecture_simple.py  test_redis_manager.py  test_speech_queue.py  test_v1_events_integration.py
tests/load/: README.md  detailed_statistics_analyzer.py  locustfile.acs_media.py  locustfile.realtime_conversation.py  multi_turn_load_test.py  websocket_response_analyzer.py
utils/: azure_auth.py  ml_logging.py  telemetry_config.py  trace_context.py
utils/docstringtool/: docstring_report.json  docstring_standardizer.py
(+230 files in other folders)
